@@ -23,7 +23,7 @@ AC_PROG_INSTALL
 AC_DEFINE_UNQUOTED([SYSCONFDIR], "$sysconfdir", [System configuration directory.])
 
 AM_PATH_GLIB_2_0([2.44.0], [], [AC_MSG_ERROR([GLib >= 2.44.0 is required])], [gobject gio])
-PKG_CHECK_MODULES([TELEGNOME], [gtk+-2.0 >= 2.20 gdk-pixbuf-2.0 >= 2.26 dconf uuid])
+PKG_CHECK_MODULES([TELEGNOME], [gtk+-2.0 >= 2.20 gdk-pixbuf-2.0 >= 2.26 cairo dconf uuid])
 
 AC_ARG_VAR([XMLLINT], [the xmllint program])
 AC_PATH_PROG([XMLLINT], [xmllint])
